# mcp_slm_langchain

./: agent.py  ghdata.py  mcpserver.py  pyproject.toml  readme.md
